--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
     implementation("com.squareup.okhttp3:okhttp:4.9.0")
+    implementation 'androidx.preference:preference:1.1.1'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.11.3"
     implementation 'com.google.android.material:material:1.2.1'
